--- a/06.JS_Front-End/06.01.HTML_&_CSS/06.01.02.Exercise/06.01.02.08.CSS_Flexbox/09_Center-flexbox/Center-flexbox.html
+++ b/06.JS_Front-End/06.01.HTML_&_CSS/06.01.02.Exercise/06.01.02.08.CSS_Flexbox/09_Center-flexbox/Center-flexbox.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Center Flexbox</title>
+    <link rel="stylesheet" href="Center-flexbox.css">
 </head>
 <body>
+    <div class="card">
+        <h1>Card Title</h1>
 
+        <p>Some kind of description here that explains this strange behaviour of the system</p>
+    </div>
 </body>
 </html>
