--- a/06.JS_Front-End/06.01.HTML_&_CSS/06.01.03.Exam_Prep/2023.12.13.Retake_Exam/01.Wiki-US_Resources/index.html
+++ b/06.JS_Front-End/06.01.HTML_&_CSS/06.01.03.Exam_Prep/2023.12.13.Retake_Exam/01.Wiki-US_Resources/index.html
@@ -2,63 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Wiki US</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>United States</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Agbalumo&display=swap">
 </head>
 <body>
-    <header>
-        <p class="site-title">
-            United States
-        </p>
+    <main>
+        <header>
+            <h1>United States</h1>
 
-        <p class="site-sub-title">
-            Country
-        </p>
-    </header>
+            <p>Country</p>
+        </header>
 
-    <main class="site-main">
-        <aside>
-            <img src="images/map.webp" alt="">
+        <section class="article-description">
+            <article class="photo">
+                <img src="images/map.webp" alt="">
 
-            <p>The USA Map highlights the country's boundaries, states, and important cities. The map also includes major rivers, lakes, mountain ranges, national parks, and popular tourist attractions such as the Statue of Liberty, the Golden Gate Bridge, and Niagara Falls.</p>
-        </aside>
+                <p>The USA Map highlights the country's boundaries, states, and important cities. The map also includes major rivers, lakes, mountain ranges, national parks, and popular tourist attractions such as the Statue of Liberty, the Golden Gate Bridge, and Niagara Falls.</p>
+            </article>
 
-        <section>
-            <p>The United States of America (USA), is a country primarily located in North America and consisting of 50 states, a federal district, five major unincorporated territories, and nine Minor Outlying Islands. It includes 326 Indian reservations. It is the world's third-largest country by both land and total area.</p>
+            <article class="description">
+                <p>The United States of America (USA), is a country primarily located in North America and consisting of 50 states, a federal district, five major unincorporated territories, and nine Minor Outlying Islands. It includes 326 Indian reservations. It is the world's third-largest country by both land and total area.</p>
 
-            <p>It shares land borders with Canada to its north and with Mexico to its south and has maritime borders with the Bahamas, Cuba, Russia, and other nations. The national capital of the United States is Washington, D.C., and its most populous city and principal financial center is New York City.</p>
+                <p>It shares land borders with Canada to its north and with Mexico to its south and has maritime borders with the Bahamas, Cuba, Russia, and other nations. The national capital of the United States is Washington, D.C., and its most populous city and principal financial center is New York City.</p>
+            </article>
+        </section>
+
+        <section class="facts">
+            <h2>Facts about United States</h2>
+
+            <div>
+                <p><strong>Population:</strong> 333,287,557 (2022)</p>
+                <p><strong>Area:</strong> 9,833,520 km2</p>
+                <p><strong>Capital:</strong> Washington, D.C.</p>
+                <p><strong>Government:</strong> Federal presidential constitutional republic</p>
+            </div>
         </section>
     </main>
-
-    <footer>
-    <div class="footer-container">
-        <div class="footer-title">
-            <div class="title-background">
-                Facts about United States
-            </div>
-            <div class="title-background-white"></div>
-        </div>
-
-        <p class="info">Population: 333,287,557 (2022)</p>
-        <p class="info">Area: 9,833,520 km2</p>
-        <p class="info">Capital: Washington, D.C.</p>
-        <p class="info">Government: Federal presidential constitutional republic</p>
-    </div>
-</footer>
-
-
-<!--    <footer>-->
-<!--        <p class="footer-title">-->
-<!--            Facts about United States-->
-<!--        </p>-->
-
-<!--        <p class="info">Population: 333,287,557 (2022)</p>-->
-<!--        <p class="info">Area: 9,833,520 km2</p>-->
-<!--        <p class="info">Capital: Washington, D.C.</p>-->
-<!--        <p class="info">Government: Federal presidential constitutional republic</p>-->
-
-<!--    </footer>-->
-
 </body>
 </html>
