JS Front-End, Lab 05

--- a/06.JS_Front-End/06.02.JS_Front-End/06.02.02.Exercises/06.02.02.05.DOM_Introduction/06.02.02.05.01.Class/06.02.02.05.01.01. Subtraction/index.html
+++ b/06.JS_Front-End/06.02.JS_Front-End/06.02.02.Exercises/06.02.02.05.DOM_Introduction/06.02.02.05.01.Class/06.02.02.05.01.01. Subtraction/index.html
@@ -1,5 +1,7 @@
-<!--Problems for in-class lab for the “JavaScript Advanced” course @ SoftUni.
-Submit your solutions in the SoftUni judge system at https://judge.softuni.org/Contests/2761/DOM-Introduction-Exercise -->
+<!--
+Problems for in-class lab for the “JavaScript Advanced” course @ SoftUni.
+Submit your solutions in the SoftUni judge system at https://judge.softuni.org/Contests/2761/DOM-Introduction-Exercise
+-->
 
 
 <!DOCTYPE html>
@@ -10,8 +12,7 @@ Submit your solutions in the SoftUni judge system at https://judge.softuni.org/C
     <title>Subtraction</title>
     <link rel="stylesheet" href="index.css">
 </head>
-
-<body>
+    <body>
     <div id="wrapper">
         <input type="text" id="firstNumber" value="13.33" disabled>
         <input type="text" id="secondNumber" value="22.18" disabled>
@@ -20,10 +21,9 @@ Submit your solutions in the SoftUni judge system at https://judge.softuni.org/C
     </div>
     <script src="subtract.js"></script>
     <script>
-        window.onload = function() {
+        window.onload = function () {
             subtract();
         }
     </script>
-</body>
-
+    </body>
 </html>
